--- a/CardView/app/src/main/res/layout/activity_main.xml
+++ b/CardView/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,6 @@
     </android.support.design.widget.CollapsingToolbarLayout>
 
 </android.support.design.widget.AppBarLayout>
-    <include layout="@layout/content_main" />
+    <include layout="@layout/activity_content" />
 
 </android.support.design.widget.CoordinatorLayout>
